# 3DM-Gen

./: .gitignore  LICENSE  Readme.md  pyproject.toml
docs/: Comparison between librosa and torchaudio.md  designdoc.md
notebooks/: Audio_processing.py  aist_smpl_exploration.ipynb  librosa_audio_proc.ipynb  vid_gen1.ipynb  video_gen2.ipynb
notebooks/aist_smpl/: motion_feature.py  notebook_utils.py
references/: tasks_research.md
tools/mov_audio_converter/: mov_audio_converter.py  requirements.txt
tools/visualize_app/: plotter.py  video_generator.py
tools/visualize_app/hexapod/: hexagon.py  hexapod.py  linkage.py  model_settings.py
tools/visualize_app/hexapod/ground_contact_solver/: ground_contact_solver.py  ground_contact_solver2.py  shared.py
tools/visualize_app/hexapod/solvers/: hexapod_solver.py  hexapod_support_check.py  ik_info.py  ik_solver.py  linkage_ik_solver.py  twist_solver.py  walk_sequence_solver.py
tools/visualize_app/hexapod/solvers/oriental/: oriental_helper.py  oriental_solver_general.py  oriental_solver_specific.py
tools/visualize_app/hexapod/utils/: geometry.py  points.py  vector.py
